hover states completed

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             </p>
             <div class="blog-gallery">
               <div>
-                
               </div>
+              <img src="assets/images/blog-img-1.jpg" alt="An eye shut">
               <img src="assets/images/blog-img-2.jpg" alt="">
               <img src="assets/images/blog-img-3.jpg" alt="">
             </div>
