images formaat modified

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
               <button type="button">Read More</button>
             </div>
             <div class="about-us-img">
-              <img src="assets/images/about-us-img-1.jpg" alt="">
-              <img src="assets/images/about-us-img-2.jpg" alt="">
-              <img src="assets/images/about-us-img-3.jpg" alt="">
+              <img src="assets/images/about-us-img-1.png" alt="">
+              <img src="assets/images/about-us-img-2.png" alt="">
+              <img src="assets/images/about-us-img-3.png" alt="">
             </div>
           </div>
 
@@ -93,7 +93,7 @@
               <button type="button">See How it Works</button>
             </div>
             <div class="hire-img">
-              <img src="assets/images/hire-talent.jpg" alt="">
+              <img src="assets/images/hire-talent.png" alt="">
             </div>
           </div>
 
@@ -105,9 +105,9 @@
               <button type="button">Get Started</button>
             </div>
             <div class="potentials-img">
-              <img src="assets/images/potentials-img-1.jpg" alt="">
-              <img src="assets/images/potentials-img-2.jpg" alt="">
-              <img src="assets/images/potentials-img-3.jpg" alt="">
+              <img src="assets/images/potentials-img-1.png" alt="">
+              <img src="assets/images/potentials-img-2.png" alt="">
+              <img src="assets/images/potentials-img-3.png" alt="">
             </div>
           </div>
 
@@ -131,9 +131,9 @@
             <div class="blog-gallery">
               <div>
               </div>
-              <img src="assets/images/blog-img-1.jpg" alt="An eye shut">
-              <img src="assets/images/blog-img-2.jpg" alt="">
-              <img src="assets/images/blog-img-3.jpg" alt="">
+              <img src="assets/images/blog-img-1.png" alt="An eye shut">
+              <img src="assets/images/blog-img-2.png" alt="">
+              <img src="assets/images/blog-img-3.png" alt="">
             </div>
           </div>
 
