AOS added to images

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 publications, newspapers, tv shows and advertisements</p>
               <button type="button">Read More</button>
             </div>
-            <div class="about-us-img">
+            <div class="about-us-img scroll fade-top">
               <img src="assets/images/about-us-img-1.png" alt="">
               <img src="assets/images/about-us-img-2.png" alt="">
               <img src="assets/images/about-us-img-3.png" alt="">
@@ -92,7 +92,7 @@
                 publications, newspapers, tv shows and advertisements</p>
               <button type="button">See How it Works</button>
             </div>
-            <div class="hire-img">
+            <div class="hire-img scroll fade-right">
               <img src="assets/images/hire-talent.png" alt="">
             </div>
           </div>
@@ -104,7 +104,7 @@
                 publications, newspapers, tv shows and advertisements</p>
               <button type="button">Get Started</button>
             </div>
-            <div class="potentials-img">
+            <div class="potentials-img scroll fade-left">
               <img src="assets/images/potentials-img-1.png" alt="">
               <img src="assets/images/potentials-img-2.png" alt="">
               <img src="assets/images/potentials-img-3.png" alt="">
